<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">ROKI智能烹饪</string>
    <string name="roik_automatic_cooking">自动烹饪</string>
    <string name="home_tab_personal">我</string>
    <string name="home_tab_ip">达人</string>
    <string name="home_tab_recipe">美食</string>
    <string name="home_tab_device_kitchen">我的厨房</string>
    <string name="home_tab_device">智能</string>
    <string name="home_tab_trolley">购物车</string>
    <string name="exit_the_program">再按一次返回键退出程序</string>
    <string name="home_user_login_text">请登录</string>
    <string name="device_detail_user">已连接的用户</string>
    <string name="my_order">我的订单</string>
    <string name="my_trolley_bus">我的购物车</string>
    <string name="my_food_shopping">食材商城</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_cook_moments">我的创作</string>
    <string name="my_device">厨电管理</string>
    <string name="my_cook_line">烹饪曲线</string>
    <string name="my_ip">达人</string>
    <string name="my_series_detail_title">栏目详情</string>
    <string name="my_device_detail">厨电详情</string>
    <string name="my_sale_service">一键售后</string>
    <string name="my_about">关于ROKI</string>
    <string name="my_setting">设置</string>
    <string name="my_account_safe">账户与安全</string>
    <string name="my_cancel_account">注销账户</string>
    <string name="my_verify_phone">验证手机</string>
    <string name="my_device_kitchen_appliance">已有厨电</string>
    <string name="my_device_add_kitchen_appliance">添加新厨电</string>
    <string name="my_device_not_purchase_kitchen_appliance">您还没有购买我们的智能厨电</string>
    <string name="steam_name_226">蒸箱226</string>
    <string name="user_login_name">用户名</string>
    <string name="user_login_pwd">请输入密码</string>
    <string name="wifi_comm">连接WiFi</string>
    <string name="wifi_comm_fail">连接失败</string>
    <string name="recipe_class_hot">热门</string>
    <string name="recipe_class">分类</string>
    <string name="my_collect_theme">主题</string>
    <string name="my_collect_no">还没有收藏呢</string>
    <string name="my_collect_clear">还没有收藏呢</string>
    <string name="my_collect_clear_succeed"> 清空成功</string>
    <string name="my_clear">清空</string>
    <string name="my_moments_no">还没有晒过呢</string>
    <string name="my_moments_all_clear">确认清空所有厨艺照片？</string>
    <string name="my_device_fan_stove">油烟机／灶具</string>
    <string name="my_device_not_device">未知设备</string>
    <string name="my_device_fan_stove_tv">油烟机/电磁灶</string>
    <string name="my_device_delete">删除</string>
    <string name="my_device_model_number">型号</string>
    <string name="my_device_numbering">编号</string>
    <string name="device_num">号</string>
    <string name="my_device_firmware_version">固件版本</string>
    <string name="stove_name">电磁灶</string>
    <string name="after_reminding" formatted="true">您可通过下面两种方式</string>
    <string name="after_remindin_01" formatted="true">享受老板电器会员的专属服务哦~</string>
    <string name="my_sale_consulting">留言咨询</string>
    <string name="my_sale_one_key">一键售后</string>
    <string name="my_sale_one_key_call">一键售后未开通地区可拨打</string>
    <string name="my_sale_problem">有问题，找小R</string>
    <string name="my_sale_send">发送</string>
    <string name="base_req_failed">请求失败</string>
    <string name="base_req_timeout">请求超时</string>
    <string name="my_about_user_protocol">ROKI用户协议</string>
    <string name="my_about_click_here_check">点此检查</string>
    <string name="my_about_version_update">版本更新</string>
    <string name="my_about_robam_url">www.robam.com</string>
    <string name="my_about_robam_web">老板官网</string>
    <string name="my_about_roki_user_protocol">ROKI用户协议</string>
    <string name="my_about_privacy_protocol">隐私政策</string>
    <string name="my_about_robam_name">杭州老板电器股份有限公司</string>
    <string name="my_about_robam_certificate">Copyright 2011-2014 Roki. All Right Reserved</string>
    <string name="home_stove_text">灶</string>
    <string name="home_oven_text">烤</string>
    <string name="home_steam_text">蒸</string>
    <string name="home_microwave_text">微</string>
    <string name="home_steam_oven_text">蒸烤</string>
    <string name="home_stove_recipe_text">灶具菜谱</string>
    <string name="home_oven_recipe_text">电烤箱菜谱</string>
    <string name="home_combi_steam_oven_recipe_text">一体机菜谱</string>
    <string name="home_steam_recipe_text">电蒸箱菜谱</string>
    <string name="home_microwave_recipe_text">微波炉菜谱</string>
    <string name="home_steamovenone_recipe_text">蒸烤菜谱</string>
    <string name="home_steam_ovenone_recipe_text">一体机菜谱</string>
    <string name="home_steam_oven_recipe_text">电蒸箱菜谱</string>
    <string name="home_pot_recipe_text">无人锅菜谱</string>
    <string name="home_knowledge_kitchen">厨房知识</string>
    <string name="home_more_theme_recommendations">更多主题推荐</string>
    <string name="home_attention_dynamic">关注动态</string>
    <string name="home_recommend_10_courses">为你推荐好吃的10道菜</string>
    <string name="home_live_cooking">就知道你喜欢下面这些高逼格的家常菜</string>
    <string name="home_more_recipe">更多菜谱</string>
    <string name="home_recipe_ingredients">菜谱 食材</string>
    <string name="home_eat_what">想不到吃什么？</string>
    <string name="home_click_to_get_recipe">点我帮你轻松决定烹饪菜谱</string>
    <string name="home_click_to_random">开始</string>
    <string name="home_last_week_top">上周TOP榜单</string>
    <string name="home_change_again">我想再换一个</string>
    <string name="home_stop">停止</string>
    <string name="home_tell_roki">告诉ROKI</string>
    <string name="home_tell_roki_desc">请告诉我们您的意见或建议……</string>
    <string name="home_tell_roki_your_cellphone">选填，便于我们与您联系</string>
    <string name="add_device_failure">添加完成</string>
    <string name="device_finish">完成</string>
    <string name="device_yi_finish">已完成</string>
    <string name="device_door_off">门未关，工作暂停</string>
    <string name="roki_error_no_wifi">无可用WiFi网络，请检查WiFi网络</string>
    <string name="roki_wifi_pwd_hint">请输入WiFi密码</string>
    <string name="steam_invalid_error">蒸汽炉已离线</string>
    <string name="fan_invalid_error">油烟机已离线</string>
    <string name="stoven_ranqi_error">燃气灶已离线</string>
    <string name="steri_invalid_error">消毒柜已离线</string>
    <string name="steam_oven_invalid_error" tools:ignore="ExtraTranslation">蒸烤一体机已离线</string>
    <string name="oven_invalid_error">烤箱已离线</string>
    <string name="stove_invalid_error">电磁灶已离线</string>
    <string name="stove_off_hint">请手动打开电磁灶</string>
    <string name="dev_invalid_error">没有可用的设备</string>
    <string name="device_Throwable_error">下发指令失败</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="model">模式</string>
    <string name="majors">专业</string>
    <string name="temp">温度</string>
    <string name="time">时间</string>
    <string name="minute">分钟</string>
    <string name="minute2">分</string>
    <string name="hour_later">小时之后</string>
    <string name="water">水量</string>
    <string name="temp_2">双温</string>
    <string name="control_2">双控</string>
    <string name="order">预约</string>
    <string name="one">一</string>
    <string name="celsius">℃</string>
    <string name="detail">详情</string>
    <string name="sterilizer_temp">温度/℃</string>
    <string name="sterilizer_hum">湿度/%rh</string>
    <string name="sterilizer_ozone">臭氧/mg/l</string>
    <string name="sterilizer_germ">细菌/%</string>
    <string name="sterilizer_data_desc">数据仅供参考</string>
    <string name="sterilizer_water_out">弹出水箱</string>
    <string name="appointment_time_text">预约时间</string>
    <string name="start_appointment_text">开始预约</string>
    <string name="work_time_text">工作时长</string>
    <string name="dynamic_cancel_thumb_up">取消点赞</string>
    <string name="dynamic_thumb_up">已赞</string>
    <string name="maternal_and_child_series">母婴系列</string>
    <string name="steamOvenOneRecipe">一体机菜谱</string>
    <string name="steamOvenOne_name">一体机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_count_down_dialog">CountDownDialog</string>
    <string name="child_lock">童锁</string>
    <string name="remove_child_lock">请先解除童锁</string>
    <string name="steam_oven_chinese">电蒸箱</string>
    <string name="steam_oven_english">SteamOven</string>
    <string name="steam_oven_cookbook">电蒸箱菜谱</string>
    <string name="fan_name_66A2H">"烟机66A2H"</string>
    <string name="hood_stopworking_hint1">烟机已经停止工作</string>
    <string name="hood_stopworking_hint2">将挡风板卸下</string>
    <string name="hood_stopworking_hint3">将里面的油网拿出来清洗</string>
    <string name="hood_stopworking_hint4">*烟机端长按"照明键"3s恢复正常工作</string>
    <string name="hood_stopworking_delay">1min后关机</string>
    <string name="fan8700_oil_purchase">油网小帮手即将上市</string>
    <string name="cantfindmodeldesc1">1.&#160;&#160;选项中找不到自己对应的型号：\n &#160;&#160;&#160;&#160;请输入搜索型号；若仍无法找到，请确认\n&#160;&#160;&#160;&#160;&#160;您购买的产品是否支持ROKI系统</string>
    <string name="cantfindmodeldesc2">2.&#160;在产品上找不到型号标注：\n&#160;&#160;&#160;&#160;在产品正面寻找，若为侧吸油烟机，请在机器侧面\n&#160;&#160;&#160;&#160;铭牌上寻找产品类型</string>
    <string name="cantfindmodeldesc3">1.&#160;若你家是大屏烟机(如8230、8229、\n&#160;&#160;&#160;&#160;8230S、5910),请在烟机屏幕上添加灶具。</string>
    <string name="stove_connect_desc">带ROKI系统的灶具通电后会自动连接和\n烟机匹配联网。\n图中图标亮起，即联网成功</string>
    <string name="connectPower">接通电源；</string>
    <string name="connectNetDesc1">长按产品上的</string>
    <string name="connectNetDesc2">2秒，直到如图所示</string>
    <string name="connectNetDesc3">3/4红圈闪烁。</string>
    <string name="cannotfinishperform">无法完成上述操作？</string>
    <string name="redcircleflicker">红圈闪烁中</string>
    <string name="loading">加载中</string>
    <string name="wifi_hint_editText_name">请输入wifi名称</string>
    <string name="wifi_selected_list">wifi选择列表</string>
    <string name="wificonnecttip1">1.首先需要将手机连接到您家里的WIFI热点。</string>
    <string name="wificonnecttip2">2.若不是你想要的网络，请在手机设置中切换。</string>
    <string name="wificonnecttip3">3.如果您家里Wi-Fi不需要密码，请不用输入密码，直接确认即可。</string>
    <string name="wificonnecttip4">4.设备不支持5GWiFi，请关闭路由器5G频段。</string>
    <string name="wificonnectfailedtip1">1.请确认您输入的wifi密码是正确的</string>
    <string name="wificonnectfailedtip2">2.可能是路由器信号不佳，查看手机是否可在此WIFI环境下上网；</string>
    <string name="wificonnectfailedtip3">3.若以上均无问题，可能是您的路由器型号暂不支持本产品的连接，请联系我们产品的售后</string>
    <string name="wificonnectfailedtip4">4.若已扫描二维码但无法连接，可能是网络问题，请保持网络顺畅，重新扫描。</string>
    <string name="scandesc">扫描产品上的二维码,以获得控制权。</string>
    <string name="tryagain">再试一次</string>
    <string name="call">拨打服务电话</string>
    <string name="activeproduct">激活产品需要您的手机连接至WIFI环境。</string>
    <string name="gotosetting">去设置</string>
    <string name="alreadysetting">已设置</string>
    <string name="scan">扫一扫</string>
    <string name="search">搜索</string>
    <string name="search_device">搜索产品</string>
    <string name="deviceaddtip">您还未添加设备，点击右上角添加。</string>
    <string name="cantfinddevice">搜不到您要的型号</string>
    <string name="cantfinddevice2"><u>搜不到您要的型号？</u></string>
    <string name="origin">来源</string>
    <string name="electrickitchen">厨电</string>
    <string name="flavor">口味</string>
    <string name="reset">重置</string>
    <string name="next_recipe_time">没有更早期啦</string>
    <string name="up_recipe_time">已是最新期</string>
    <string name="filter">筛选</string>
    <string name="waterpurifier_people">设置家庭人数</string>
    <string name="device_sterilizer">消毒</string>
    <string name="rika_appointment_steri">预约消毒</string>
    <string name="login_set_complete">完成</string>
    <string name="not_login">未登录</string>
    <string name="login_or_register">点击注册/登录</string>
    <string name="edit_info">编辑资料</string>
    <string name="acc_change_password">修改密码</string>
    <string name="acc_bind_phone">绑定手机</string>
    <string name="acc_bind_apple">绑定Apple Id</string>
    <string name="acc_bind_wx">绑定微信</string>
    <string name="acc_logoff">注销账户</string>
    <string name="change_password_1">请输入原密码</string>
    <string name="change_password_2">请输入新密码</string>
    <string name="change_password_3">请再次输入新密码</string>
    <string name="forget_password">忘记原密码</string>
</resources>