<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wificonnectfailedtip1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wificonnectfailedtip2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wificonnectfailedtip3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wificonnectfailedtip4" />

    <LinearLayout
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/common_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tryagain" />

        <TextView
            style="@style/common_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call" />
    </LinearLayout>


</LinearLayout>
