<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center|top"
    android:orientation="vertical"
    android:id="@+id/dialog_hood_stop_working"
    android:paddingTop="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/qingxiyouwang" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hood_stopworking_hint1"
        android:textColor="@color/yellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hood_stopworking_hint2"
        android:textColor="@color/yellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hood_stopworking_hint3"
        android:textColor="@color/yellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hood_stopworking_hint4"
        android:textColor="@color/red" />


</LinearLayout>
