<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mine_background"
    android:orientation="vertical">
    <View
        android:id="@+id/status_bar_fix"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white" />
    <com.hjq.bar.TitleBar app:drawableSize="25dp"

        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:barStyle="transparent"
        android:background="#ffffff"
        app:titleColor="@color/mine_text_color"
        app:leftIcon="@mipmap/icon_back_black"
        app:rightSize="18sp" />
    <com.robam.roki.ui.widget.layout.SettingBar
        android:layout_marginTop="15dp"
        android:id="@+id/stb_change_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:bar_leftText="@string/acc_change_password"
        app:bar_rightIcon="@drawable/icon_more"
        />

    <com.robam.roki.ui.widget.layout.SettingBar
        android:id="@+id/stb_bind_phone"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:bar_leftText="@string/acc_bind_phone"
        app:bar_rightColor="@color/mine_text_color3"
        app:bar_rightIcon="@drawable/icon_more"
       />
    <com.robam.roki.ui.widget.layout.SettingBar
        android:id="@+id/stb_bing_wx"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:bar_rightColor="@color/mine_text_color3"
        app:bar_leftText="@string/acc_bind_wx"
        app:bar_rightIcon="@drawable/icon_more"
        />
    <com.robam.roki.ui.widget.layout.SettingBar
        android:id="@+id/stb_bind_apple"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:bar_rightColor="@color/mine_text_color3"
        android:visibility="gone"
        app:bar_leftText="@string/acc_bind_apple"
        app:bar_rightIcon="@drawable/icon_more"
        />

    <com.robam.roki.ui.widget.layout.SettingBar
        android:id="@+id/stb_logoff"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:bar_leftText="@string/acc_logoff"
        app:bar_rightIcon="@drawable/icon_more"
        />

</LinearLayout>
