<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/whitesmoke"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

        <TextView
            android:id="@+id/tv_device_model_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rika_appointment_steri"
            android:textColor="@color/c41"
            android:textSize="20sp"
            android:layout_alignTop="@+id/iv_back"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:foreground="@drawable/sel_common_bg_press"
        android:background="@drawable/shape_recyclerview_item_white_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/model"
            android:textColor="@color/c44"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/device_sterilizer"
            android:textColor="@color/c41"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/img_more_arrow"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:foreground="@drawable/sel_common_bg_press"
        android:background="@drawable/shape_recyclerview_item_white_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/work_time_text"
            android:textColor="@color/c44"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/minute"
            android:textColor="@color/c41"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/img_more_arrow"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:foreground="@drawable/sel_common_bg_press"
        android:background="@drawable/shape_recyclerview_item_white_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/appointment_time_text"
            android:textColor="@color/c44"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_time_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/hour_later"
            android:textColor="@color/c41"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/img_more_arrow"/>

    </RelativeLayout>


   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:id="@+id/tv_btn"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:text="@string/start_appointment_text"
           android:textSize="20sp"
           android:textColor="@color/black"
           android:gravity="center"
           android:layout_marginRight="30dp"
           android:layout_marginLeft="30dp"
           android:layout_marginBottom="40dp"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:background="@drawable/shape_wifi_btn_bg"/>


   </RelativeLayout>


</LinearLayout>