<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mine_background"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar_fix"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white" />
    <com.hjq.bar.TitleBar app:drawableSize="25dp"
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:barStyle="transparent"
        android:background="#ffffff"
        app:titleColor="@color/mine_text_color"
        app:leftIcon="@mipmap/icon_back_black"
        app:rightSize="18sp" />

    <com.robam.roki.ui.widget.view.PasswordEditText
        android:id="@+id/et_password_old"
        style="@style/EditTextStyle"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/change_password_1"
        android:background="@color/white"
        android:imeOptions="actionDone"
        android:maxLength="20"
        android:singleLine="true"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <com.robam.roki.ui.widget.view.PasswordEditText
        android:id="@+id/et_password_new1"
        style="@style/EditTextStyle"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/change_password_2"
        android:background="@color/white"
        android:imeOptions="actionDone"
        android:maxLength="20"
        android:singleLine="true"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry"/>


    <com.robam.roki.ui.widget.view.PasswordEditText
        android:id="@+id/et_password_new_2"
        style="@style/EditTextStyle"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/change_password_3"
        android:background="@color/white"
        android:imeOptions="actionDone"
        android:maxLength="20"
        android:singleLine="true"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_complete"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/login_set_complete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_forget_password"
        style="@style/ButtonStyle"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@drawable/countdown_color_selector_text"
        android:textSize="14sp"
        android:text="@string/forget_password" />
</LinearLayout>
